[package]
name = "runwind"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]

[dependencies]
gimli = { git = "https://github.com/roblabla/gimli", branch = "megaton", default-features = false }
libc = { git = "https://github.com/megatonhammer/libc", default-features = false }
fallible-iterator = { version = "0.1", default-features = false }
log = { version = "0.4", default-features = false }

[build-dependencies]
gcc = "0.3.52"

[dev-dependencies]
backtrace = "0.3"
env_logger = "0.5"

[features]
default = ["std"]
std = ["gimli/std", "fallible-iterator/std"]
nightly = ["gimli/alloc", "fallible-iterator/alloc"]
